1.52: (2006-07-09)
   -- AddTimer now returns a Danga::Socket::Timer object which you can
      call the 'cancel' method on.

   -- A good catch by Whitaker. If an epoll_ctl problem occurs when
      manipulatiing something that isn't an INET domain socket, the
      unpacking of remote information will fail.

1.51: (2006-04-27)
   -- let subclasses overwrite the behavior on incomplete writes.
      default, as always, is just to force watching of writability.
      but during, say, SSL stuff, it's useful to disable that.

1.50: (2006-04-17)
   -- use bytes.  was affecting djabberd with unicode XML messages.
      diagnosis by Artur Bergman and Tatsuhiko Miyagawa.

1.49: (2006-03-02)
   -- patch to allow pluggable writer functions per socket.  so you
      can have SSL connections that do Net::SSLeay writes (or whatever)
      instead of relying on tied handles.

1.48: (2005-10-12)
   -- patch from Eric Lambrecht <eml@guba.com> who noticed that calling
      sysread in Perl w/ over ~5MB could cause Perl to just die and quit.
      so limit reads to 5MB.

1.47: (2005-08-29)
   -- new $ENV{DS_DEBUG} to warn about weird conditions, which currently
      means just peer_ip_string returning undef.  trying to trace that down
      in perlbal occasionally, but DS_DEBUG might be useful in the future
      for other things
   -- account for PostEventLoop running with two items in %PushBackSet,
      the first of which closes the second, so the second would crash
      trying to deref undef when it can't find the previously evaluated
      key in the now-empty hash.

1.46: (2005-08-24)
   -- warn about undef sockets in Danga::Socket's constructor, or overwriting
      the descriptor map with a socket using the same fd as another in use.
   -- change all print STDERR to warn (so we can trap 'em with $SIG{__WARN__})
   -- delay the removal of fds from DescriptorMap to eliminate warnings
      when one fds in the same epoll_wait/etc return set kills one of