@@ -1,3 +1,7 @@
+   -- Don't allow ->read() if socket has been closed (msergeant).
+   -- Added local_ip_string() and local_addr_string() (msergeant).
+   -- Removed bogus 'ticker' code from KQueue event loop (msergeant).
+
 1.52: (2006-07-09)
    -- AddTimer now returns a Danga::Socket::Timer object which you can
       call the 'cancel' method on.
